# ros-monitoring-system

./: .dockerignore  .gitignore  Makefile  README.md
.devcontainer/: devcontainer.json
docker/: Dockerfile  docker-compose.nvidia.yml  docker-compose.ogpu.yml  docker-compose.wslg.yml  docker-compose.yml  entrypoint.sh
docker/scripts/: start_desktop.sh
file_manager/: app.py
ros_ws/src/krsti_description/: CMakeLists.txt  package.xml
ros_ws/src/krsti_description/config/: ros2_control.yaml
ros_ws/src/krsti_description/launch/: robot_description.launch.py
ros_ws/src/krsti_description/meshes/: KEPALA_v1_1.stl
ros_ws/src/krsti_description/urdf/: krsti.trans  krsti.xacro  materials.xacro
ros_ws/src/krsti_gazebo/: CMakeLists.txt  package.xml
ros_ws/src/krsti_gazebo/launch/: gazebo.launch.py
ros_ws/src/krsti_gazebo/worlds/: krsti_world.sdf
ros_ws/src/my_robot/: CMakeLists.txt  package.xml
ros_ws/src/my_robot/launch/: display.launch.py
ros_ws/src/my_robot/urdf/: bioloid.urdf
