<?xml version="1.0"?>
<package format="3">
  <name>my_robot</name>
  <version>0.0.1  </version>
  <description>Robot Monitoring Package</description>
  <maintainer email="soktauw@email.com">hehe</maintainer>
  <license>UNS (Unlicensed) :v</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>robot_state_publisher</depend>
  <depend>joint_state_publisher</depend>
  <depend>joint_state_publisher_gui</depend>
  <depend>xacro</depend>
  <depend>rviz2</depend>
  <depend>gazebo_ros</depend>
  <depend>gazebo_ros_pkgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
